# django-namespaces

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  rav.yaml  requirements.dev.txt  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yaml
example/: .gitignore  README.rst  db.sqlite3  requirements.in
example/example/: settings.py  urls.py  views.py
requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py311-django32.txt  py311-django40.txt  py311-django41.txt  py37-django32.txt  py37-django41.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  requirements-32.in  requirements-40.in  requirements-41.in  requirements.txt
sample_project/: README.rst  db.sqlite3  requirements.txt
sample_project/example/: blocked.py  settings.py  views.py
sample_project/projects/: admin.py  apps.py  models.py  tests.py  views.py
sample_project/projects/migrations/: 0001_initial.py  0002_remove_namespace_user.py
src/django_namespaces/: __init__.py  admin.py  apps.py  blocked.py  checks.py  conf.py  context_processors.py  decorators.py  forms.py  import_utils.py  middleware.py  mixins.py  models.py  namespaces.py  resolvers.py  services.py  urls.py  utils.py  validators.py  views.py
src/django_namespaces/migrations/: 0001_default.py  0001_initial.py  0002_alter_namespace_options_alter_namespace_slug.py  0003_alter_namespace_slug.py  0004_alter_namespace_options_rename_slug_namespace_handle.py  0005_namespace_default.py  0006_alter_namespace_default.py
src/django_namespaces/templates/: base.html
src/django_namespaces/templates/django_namespaces/: namespace_create.html  namespace_delete.html  namespace_list.html  namespace_needs_activation.html  namespace_update.html
src/django_namespaces/templates/django_namespaces/snippets/: namespace_create.html  namespace_list.html  namespace_update.html
tests/: conftest.py  settings.py  test_blocked.py  test_checks.py  test_conf.py  test_context_processors.py  test_decorators.py  test_forms.py  test_import_utils.py  test_middleware.py  test_models.py  test_reactions.py  test_services.py  test_utils.py  test_validators.py  test_views.py  urls.py
tests/fixtures/namespaces/: test_namespaces.json
tests/requirements/: compile.py  py310-django42.txt  py310-django50.txt  py310-django51.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py313-django51.txt  requirements.in
tests/test_app/: apps.py  models.py
