[metadata]
name = django-namespaces
version = 0.0.8
title = django-namespaces
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = Justin Mitchel
author_email = hello@teamcfe.com
url = https://github.com/jmitchel3/django-namespaces
project_urls =
    Documentation = https://github.com/jmitchel3/django-namespaces
    Changelog = https://github.com/jmitchel3/django-namespaces/blob/main/HISTORY.rst
    Twitter = https://twitter.com/joincfe
license = MIT
keywords = Django
classifiers =
    Development Status :: 1 - Planning
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Django>=3.2
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    django_namespaces
    tests

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203